--- a/VRChat/03/1249603.html
+++ b/VRChat/03/1249603.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1249603">
     <meta name="robots" content="max-image-preview:large">
-    <meta name="ga:shop" content="UA-187635890-1">
+    <meta name="ga:shop" content="G-J1ZTKT1KBJ">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -77,7 +77,7 @@
     <script src=
     "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "C8CQsg6yhxFNIwdJ7y3Vckzo38WANftt3nwJVWu6Oyk="></script>
+    "/UI1/r7s6n5151DgvPs4OjuaPZorL8qBMIAbdxUfSVg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ひな祭りで使えそうな3Dモデル【VRChat使用可、オリジナル3Dモデル】","description":"ひな祭りで使えそうな3Dモデルを作りました。\n\n雪洞2種（丸形と床設置型）\n雛壇2種（布状と四角形）\n屏風2種（金色、銀色）\n座布団2種（金色、緑色）\n※鏡餅（紅白）、菱餅、三方2種（穴あり、穴なし）、餅を乗せる板、台、紙を追加しました。\n※餅や三方は別々に動かせるようになっています。VRC_Pickupなどを設定することで個別に持ち上げるような操作もできるようになります。\n※三方、板は木目、黒色、赤色の3種、台は黒色と赤色の2種があります。\n※餅と三方などを組み合わせたPrefab24種を追加しました。\n\n詳細な説明画像は後日追加します。\nVRChatにアップロードし、実際にテストした際に撮影した画像のみ貼っておきます。撮影の際に使用したモデルは雪洞B（床設置型）、屏風（金色）、座布団（金色）、雛壇（布状）です。\n\nunitypakageにはPrefab8種、うち1つは雛壇（布状）に座布団、雪洞、屏風を乗せてGameObjectにまとめたもの。サンプルシーン入り。\n\n雪洞は本体部分と紙部分を別のマテリアルにしてあります。\nEmissionを設定することであかりをつけることができます。\n\nVRChatのアバター、ワールドでの使用を想定して制作しました。\n\n---------------------------------------------------------------\nファイルの中身\n・Hinamatsuri.unitypackage\n・BonboriA.fbx（△2872ポリゴン）\n・BonboriB.fbx（△2296ポリゴン）\n・Byoubu.fbx（△140ポリゴン）\n・Hinadan1dan.fbx（△3092ポリゴン）\n・Hinadan1danbox.fbx（△12ポリゴン）\n・ZabutonA.fbx（△388ポリゴン）\n\n・テクスチャ30枚\n - 雪洞A（丸形）\n - 雪洞Aの紙部分\n - 雪洞B（床設置型）\n - 雪洞Bの紙部分\n - 屏風（金色）\n - 屏風（銀色）\n - 雛壇（ローポリ四角）\n - 雛壇（布状）\n - 座布団（金色）\n - 座布団（緑色）\n\nそれぞれベース部分、ノーマルマップ、メタリックの3種。合計30枚。\n\n※追加したファイルの中身\n - Mochi.unitypackage\n - Hishimochi_Green.fbx（△12ポリゴン）\n - Hishimochi_Red.fbx（△12ポリゴン）\n - Hishimochi_White.fbx（△12ポリゴン）\n - Kagamimochi.fbx（△108ポリゴン）\n - KagamimochiDaiA.fbx（△12ポリゴン）\n - KagamimochiDaiB.fbx（△134ポリゴン）\n - KagamimochiPaper.fbx（△96ポリゴン）\n - SanbouA.fbx（△108ポリゴン）\n - SanbouB.fbx（△716ポリゴン）\n\n色と形に対応したテクスチャ47枚\nベース部分、ノーマルマップ、メタリックの3種。\nHishimochi.fbxのみメタリックのテクスチャなし。\n合計47枚\n\nテクスチャデータはサイズ1024です。\nsampleシーンはunity2017で制作しました。\nUnitypackageにまとめてあります。\n\n改変自由。\n容易に3Dモデルデータとして使える状態での再配布禁止。\nゲーム、映像作品などで使うことができます。商用可。","url":"https://booth.pm/ja/items/1249603","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/ba1632d1-d7a2-47bf-b5c7-b1b4c83290fc/i/1249603/b001e044-7661-449e-8b73-8d2b13f4415f_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="C8CQsg6yhxFNIwdJ7y3Vckzo38WANftt3nwJVWu6Oyk="></script>
+    nonce="/UI1/r7s6n5151DgvPs4OjuaPZorL8qBMIAbdxUfSVg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -102,7 +102,7 @@
         <div class="recaptcha-tag" data-action=
         "booth/checkout_order" data-site-key=
         "6LfF1dcZAAAAAOHQX8v16MX5SktDwmQINVD_6mBF"></div>
-        <div class="market" data-ga-tracking-id="UA-187635890-1"
+        <div class="market" data-ga-tracking-id="G-J1ZTKT1KBJ"
         data-product-brand="wakamaru" data-product-category="210"
         data-product-id="1249603" data-product-list="market_show"
         data-product-price="700"
@@ -240,7 +240,7 @@
                                         data-product-list=
                                         "from market_show via market as gift to add_item"
                                         data-ga-tracking-id=
-                                        "UA-187635890-1" type=
+                                        "G-J1ZTKT1KBJ" type=
                                         "submit"><input type=
                                         "hidden" name=
                                         "cart_item[variation_id]"
@@ -273,7 +273,7 @@
                                           data-product-list=
                                           "from market_show via market as gift to add_item"
                                           data-ga-tracking-id=
-                                          "UA-187635890-1" type=
+                                          "G-J1ZTKT1KBJ" type=
                                           "submit">ギフトとして贈る</button>
                                         </div>
                                       </form>
