--- a/VRChat/26/1268526.html
+++ b/VRChat/26/1268526.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/caabce76a16a06cb0535.js" defer=
+    "https://asset.booth.pm/assets/64e3f7d917c54e844730.js" defer=
     "defer" nonce=
-    "lWSXOuODTqCSFbPzimjSd2T3pMTn/MD/RlnpsRi+Ino="></script>
+    "S0DmGvKd0JnDMJYcsSOxbGsv0hfXe1XP80bw7AFj42Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スチームパンク風鞄 - StarGearBoxV1","description":"　ー◆ー\n\n1.商品情報\n\nオリジナル3Dモデル：スチームパンク風鞄 - StarGearBoxV1\n制作者：袴狐（HakamaKitune）\nデータ形式：Unityパッケージ\n\n　ー◆ー\n\n2.利用規約\n\n本規約は、”スチームパンク風鞄 - StarGearBoxV”（以下、本モデル）の利用条件について定めます。\n本モデルを購入した時点で本利用規約に同意したものとします。\n\n(1)著作権\n本モデル、改造モデル、及び本モデルデザインの著作権は袴狐（HakamaKitune）に帰属します。\n\n(2)許可する事\n・本モデルを改造する事を許可します。\n・購入者が、本モデルまたは改造した本モデルを、VRChat等サービス内で使用する事を許可します。\n・購入者が、本モデルまたは改造した本モデルのデータを、本人が使用するためにVRChat等サービスにアップロードする事を許可します。\n\n(3)禁止事項\n・本モデル、改造モデルのデータを再配布、または販売する事を禁止します。\n・購入者以外が、本モデル及び改造モデルを使用できるようにする行為を禁止します。\n・政治、宗教活動、他者に対する誹謗中傷目的での使用を禁止します。\n・本モデル、改造モデルを使用することによって生じた何らかのトラブル、損失に対し袴狐（HakamaKitune）は一切責任を負わないものとします。\n\n(4)付則\n制定日：2019年3月10日\n\n　ー◆ー\n\n3.その他、不明な点等があれば、Teitter:@hakama__kituneまでご連絡ください。\n\n　ー◆ー","url":"https://booth.pm/ja/items/1268526","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/50d23478-2b5e-4222-bac3-adaf76fc47cb/i/1268526/b8c3943c-f5e0-44f4-ae35-b593a6c1a47a_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lWSXOuODTqCSFbPzimjSd2T3pMTn/MD/RlnpsRi+Ino="></script>
+    nonce="S0DmGvKd0JnDMJYcsSOxbGsv0hfXe1XP80bw7AFj42Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -573,7 +573,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;},{&quot;label&quot;:&quot;第二十回 博麗神社例大祭&quot;,&quot;value&quot;:&quot;reitaisai-20&quot;}]"
+    "[{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;},{&quot;label&quot;:&quot;技術書典14&quot;,&quot;value&quot;:&quot;techbookfest-14&quot;},{&quot;label&quot;:&quot;となりのモケイフェスティバル3&quot;,&quot;value&quot;:&quot;bf-tonamo3&quot;},{&quot;label&quot;:&quot;ゲームマーケット2023春&quot;,&quot;value&quot;:&quot;gamemarket-2023s&quot;},{&quot;label&quot;:&quot;COMIC1☆22&quot;,&quot;value&quot;:&quot;comic1-22&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
